feat/ya-map-component

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://api-maps.yandex.ru/2.0-stable/?apikey=792bbe16-8675-412c-8807-6065062e8b6f&load=package.full&lang=ru-RU" type="text/javascript"></script>
     <title>Test React Proj</title>
   </head>
   <body>
